<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <POU Name="FB_Communication" Id="{71515715-1dbd-4921-bede-91a04a907ca4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Communication
VAR_INPUT
	En: BOOL;
END_VAR

VAR_OUTPUT
	EnO: BOOL;
END_VAR

VAR_IN_OUT
	stAxisStruct			: ST_AxisStruct;
END_VAR

VAR
	bStart					: BOOL;
	bError					: BOOL;
	nErrorID				: LREAL;
	bStop					: BOOL;
	bReset					: BOOL;
	bResetDone				: BOOL;
	bEnabled				: BOOL;
	eCommState				: CommStates;
	bFirstScan				: BOOL:= TRUE;
	fbRTrig_StartMov		: R_trig;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[EnO:=En;

fbRTrig_StartMov(CLK:= stAxisStruct.bStart AND eCommState = 1);
//bStart	:= stAxisStruct.bStart;
//bStop	:= stAxisStruct.bStop;
//bReset	:= stAxisStruct.bReset;
//bResetDone := stAxisStruct.bResetDone;
//bEnabled	:= stAxisStruct.bEnabled; come from FB_DriveVirtual
stAxisStruct.Axis.ReadStatus();
IF NOT stAxisStruct.bEnabled AND stAxisStruct.Axis.Status.Disabled THEN 
	eCommState := 2; //disabled
ELSIF NOT stAxisStruct.bReset AND  stAxisStruct.Axis.Status.Error THEN 
	eCommState := 8; //ERROR
ELSIF stAxisStruct.bReset THEN
	eCommState := 0;
END_IF

CASE eCommState OF
        0 : (* Reset (error-ACK) *)
			IF stAxisStruct.bError AND NOT stAxisStruct.bResetDone THEN 
					eCommState := 0; //Reset not finished
			ELSIF stAxisStruct.Axis.Status.StandStill AND NOT stAxisStruct.bReset THEN //reset done jump to idle
					eCommState := 1;
			END_IF
						
		2: (*Enable, disabled*)
			IF stAxisStruct.bEnabled AND NOT stAxisStruct.bError THEN
				eCommState := 1;
			ELSIF stAxisStruct.bError THEN
				eCommState := 8;
			ELSE
				eCommState := 2;
			END_IF
		1,3: (* idle, warn *)
             (* XXX: check enable? limit switches? *)
			IF stAxisStruct.bStop THEN
				eCommState := 7;
			ELSIF fbRTrig_StartMov.Q THEN
				eCommState:= 5;
			ELSIF stAxisStruct.Axis.Status.Moving THEN
				eCommState:= 6;
			ELSE
				eCommState:= 1;
			END_IF
			//bJogBwd := bStartJogBwd;
			//bJogFwd := bStartJogFwd;
			//bHome;
           
		5:  (* START *)
			IF stAxisStruct.Axis.Status.HasJob THEN
				eCommState := 6;
			ELSIF stAxisStruct.Axis.Status.StandStill THEN
				eCommState := 1;		
			END_IF
		    //add a Ontaget siganl or use bDone?????
        6:  (* BUSY *)
			IF stAxisStruct.Axis.Status.Stopping THEN 
				eCommState := 7;
			ELSIF stAxisStruct.Axis.Status.StandStill AND NOT stAxisStruct.Axis.Status.HasJob THEN
				eCommState := 1;
          	END_IF
			
		7:  (* STOP *)
			IF stAxisStruct.Axis.Status.Stopping THEN
				eCommState := 7;
			ELSIF stAxisStruct.Axis.Status.StandStill THEN
				eCommState := 1;
			END_IF
  
        8:  (* ERROR *)
			stAxisStruct.bError := TRUE;
			stAxisStruct.nErrorID := stAxisStruct.Axis.Status.ErrorID;
			IF stAxisStruct.bReset THEN
				eCommState := 0;
			END_IF
            
    END_CASE

IF bFirstScan THEN
	bFirstScan:=FALSE;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="FB_Communication">
      <LineId Id="285" Count="1" />
      <LineId Id="235" Count="0" />
      <LineId Id="239" Count="0" />
      <LineId Id="247" Count="3" />
      <LineId Id="145" Count="0" />
      <LineId Id="208" Count="3" />
      <LineId Id="228" Count="1" />
      <LineId Id="214" Count="1" />
      <LineId Id="48" Count="2" />
      <LineId Id="53" Count="2" />
      <LineId Id="140" Count="0" />
      <LineId Id="57" Count="2" />
      <LineId Id="153" Count="0" />
      <LineId Id="174" Count="1" />
      <LineId Id="253" Count="1" />
      <LineId Id="154" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="64" Count="1" />
      <LineId Id="166" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="168" Count="1" />
      <LineId Id="256" Count="0" />
      <LineId Id="255" Count="0" />
      <LineId Id="74" Count="1" />
      <LineId Id="204" Count="2" />
      <LineId Id="77" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="257" Count="1" />
      <LineId Id="179" Count="0" />
      <LineId Id="85" Count="2" />
      <LineId Id="207" Count="0" />
      <LineId Id="218" Count="1" />
      <LineId Id="91" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="220" Count="0" />
      <LineId Id="222" Count="1" />
      <LineId Id="221" Count="0" />
      <LineId Id="106" Count="1" />
      <LineId Id="230" Count="1" />
      <LineId Id="108" Count="1" />
      <LineId Id="225" Count="0" />
      <LineId Id="113" Count="5" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>